fixed css overflow issue with grid map for rooms

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -68,8 +68,8 @@ tr:hover {
 
 .room-map {
     display: grid;
-    justify-content: center;
-    align-content: flex-start;
+    /* justify-content: center;
+    align-content: flex-start; */
     border: 3px solid black;
     min-height: 200px;
     overflow: auto;
